--- a/public/css/app.css
+++ b/public/css/app.css
@@ -701,6 +701,12 @@ select {
 .mb-auto {
   margin-bottom: auto;
 }
+.ml-20 {
+  margin-left: 5rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
 .mt-8 {
   margin-top: 2rem;
 }
@@ -709,15 +715,6 @@ select {
 }
 .-mt-px {
   margin-top: -1px;
-}
-.ml-10 {
-  margin-left: 2.5rem;
-}
-.ml-20 {
-  margin-left: 5rem;
-}
-.mr-4 {
-  margin-right: 1rem;
 }
 .block {
   display: block;
@@ -811,12 +808,6 @@ select {
 }
 .basis-1\/5 {
   flex-basis: 20%;
-}
-.basis-1\/4 {
-  flex-basis: 25%;
-}
-.basis-1\/2 {
-  flex-basis: 50%;
 }
 .basis-1\/3 {
   flex-basis: 33.333333%;
@@ -1013,6 +1004,10 @@ select {
 .bg-rose-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(251 113 133 / var(--tw-bg-opacity));
+}
+.bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 .bg-gray-800 {
   --tw-bg-opacity: 1;
@@ -1255,6 +1250,10 @@ select {
 .text-orange-600 {
   --tw-text-opacity: 1;
   color: rgb(234 88 12 / var(--tw-text-opacity));
+}
+.text-blue-900 {
+  --tw-text-opacity: 1;
+  color: rgb(30 58 138 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
